<resources>
    <string name="app_name">LC Booking</string>
    <string name="splash_slogan">Enjoy unforgettable experiences in dream hotels.</string>
    <string name="login_greeting">Hello there, welcome back</string>
    <string name="login_slogan">Sign in to continue</string>
    <string name="login_hint_username">Email Address</string>
    <string name="login_hint_password">Password</string>
    <string name="login_forget_password">Forget Password</string>
    <string name="login_login_button">Booking Now</string>
    <string name="login_new_user_sign_up">New User? Sign up</string>
    <string name="register_slogan">Let\'s start your journey</string>
    <string name="register_button">Register New Account</string>
    <string name="register_fullname">Fullname</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_explore">Explore</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fg_dashboard_where_are_you_going">where are you going</string>
    <string name="hz_hotel_card_hotel_thumbnail">Hotel Thumbnail</string>
    <string name="itemdetail_description">Description</string>
    <string name="itemdetail_description_dummy">Valentines is the most vibrant and exciting luxury resort in Harbour Island, Bahamas. The resort offers 40 spacious, tropically appointed luxury suites with fully equipped kitchens and a 50 slip state of the art Yacht Marina.</string>
    <string name="itemdetail_gallery">Gallery</string>
</resources>