<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/firstFragment"
        android:title="@string/menu_dashboard"
        android:contentDescription="@string/app_name"
        android:icon="@drawable/ic_dashboard"
    />
    <item
        android:id="@+id/secondFragment"
        android:title="@string/menu_explore"
        android:contentDescription="@string/app_name"
        android:icon="@drawable/ic_explore"
        />
    <item
        android:id="@+id/thirdFragment"
        android:title="@string/menu_favorite"
        android:contentDescription="@string/app_name"
        android:icon="@drawable/ic_favorite"
        />
    <item
        android:id="@+id/fourthFragment"
        android:title="@string/menu_account"
        android:contentDescription="@string/app_name"
        android:icon="@drawable/ic_account"
        />
</menu>