<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Screen.LoginScreen"
    android:background="@color/white"
    android:padding="20dp">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/logoImage"
        android:transitionName="logo_image"
        android:src="@drawable/login_booking"/>

    <TextView
        android:id="@+id/greetingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_greeting"
        android:textSize="40sp"
        android:textColor="@color/orange"
        android:transitionName="logo_text"
        android:fontFamily="@font/bungee_regular"/>

    <TextView
        android:id="@+id/sloganTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_slogan"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/brown"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">
        
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:hint="@string/login_hint_username"
            app:boxStrokeColor="@color/orange"
            android:textColorHint="@color/brown"
            app:placeholderTextColor="@color/orange"
            app:startIconTint="@color/orange"
            app:startIconDrawable="@drawable/ic_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/brown"
                android:id="@+id/username_et"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            app:startIconTint="@color/orange"
            android:hint="@string/login_hint_password"
            app:boxStrokeColor="@color/orange"
            app:startIconDrawable="@drawable/ic_key"
            android:textColorHint="@color/brown"
            app:placeholderTextColor="@color/orange"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/orange"
            tools:override="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/brown"
                android:id="@+id/password_et"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/login_forget_password"
            android:layout_gravity="end"
            android:elevation="0dp"
            android:textColor="@color/brown"
            android:layout_margin="5dp"
            android:id="@+id/forgetBtn"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/orange"
            android:text="@string/login_login_button"
            android:id="@+id/loginBtn"
            android:textColor="@color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/login_new_user_sign_up"
            android:layout_gravity="bottom"
            android:elevation="0dp"
            android:fontFamily="@font/poppins_light"
            android:textSize="12sp"
            android:textColor="@color/brown"
            android:layout_margin="5dp"
            android:id="@+id/registerBtn"
            />
    </LinearLayout>

</LinearLayout>