<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Screen.RegisterScreen"
    android:background="@color/white"
    android:padding="20dp">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/logoImage"
        android:src="@drawable/login_booking"/>

    <TextView
        android:id="@+id/greetingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_slogan"
        android:textSize="40sp"
        android:textColor="@color/orange"
        android:fontFamily="@font/bungee_regular"/>

    <TextView
        android:id="@+id/sloganTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create New Account"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/brown"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rg_fullname"
            android:hint="@string/register_fullname"
            app:boxStrokeColor="@color/brown"
            android:textColorHint="@color/brown"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/brown"
            android:id="@+id/rg_fullname_et"
            /></com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rg_username"
            android:hint="@string/login_hint_username"
            app:boxStrokeColor="@color/brown"
            android:textColorHint="@color/brown"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/brown"
                android:id="@+id/rg_username_et"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rg_password"
            android:hint="@string/login_hint_password"
            app:boxStrokeColor="@color/brown"
            android:textColorHint="@color/brown"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/brown"
                android:id="@+id/rg_password_et"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/registerBtn_rg"
                android:backgroundTint="@color/orange"
                android:text="@string/register_button"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</LinearLayout>